# simple_raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: cmake-ubuntu.yml  msbuild.yml
simple_raytracer/: CMakeLists.txt  Ray.h  Raytracer.cpp  Raytracer.h  Scene.cpp  Scene.h  simple_raytracer.sln  simple_raytracer.vcxproj  simple_raytracer.vcxproj.filters
simple_raytracer/include/: Ray.h  RayTracerImage.h  RayTracerImageSaver.h  Raytracer.h  RaytracerImage.h  Scene.h  SceneObject.h  SceneObjectFactory.h  Vec3.h
simple_raytracer/src/: RayTracerImageSaver.cpp  Raytracer.cpp  Scene.cpp  SceneObject.cpp  main.cpp
